# flask-server-demo

./: CONTRIBUTING.md  README.md
.github/: repository.config  take-snapshot.mjs
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-bug.yml
.github/workflows/: check-pr-title.yml  label-pr.yml
server/: pyproject.toml
server/app/: __init__.py  __main__.py
server/app/models/: data.py
server/app/routes/: home.py  users.py
