[tool.poetry]
name = "flask-server-demo"
version = "0.1.0"
description = ""
authors = ["Srija Adhya <srijaadhya.11sc.2020@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.scripts]
start = 'app.__main__:main'
run = 'app.__main__:main && flask run'

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
